docs-archive/apache-airflow-providers-google/20.0.0/_sources/_api/airflow/providers/google/cloud/hooks/cloud_run/index.rst.txt
airflow.providers.google.cloud.hooks.cloud_run
==============================================

.. py:module:: airflow.providers.google.cloud.hooks.cloud_run


Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.hooks.cloud_run.CloudRunHook
   airflow.providers.google.cloud.hooks.cloud_run.CloudRunAsyncHook
   airflow.providers.google.cloud.hooks.cloud_run.CloudRunServiceHook
   airflow.providers.google.cloud.hooks.cloud_run.CloudRunServiceAsyncHook


Module Contents
---------------

.. py:class:: CloudRunHook(gcp_conn_id = 'google_cloud_default', impersonation_chain = None, transport = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.common.hooks.base_google.GoogleBaseHook`


   Hook for the Google Cloud Run service.

   :param gcp_conn_id: The connection ID to use when fetching connection info.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account.
   :param transport: Optional. The transport to use for API requests. Can be 'rest' or 'grpc'.
       If set to None, a transport is chosen automatically. Use 'rest' if gRPC is not available
       or fails in your environment (e.g., Docker containers with certain network configurations).


   .. py:attribute:: transport
      :value: None



   .. py:method:: get_conn()

      Retrieve connection to Cloud Run.

      :return: Cloud Run Jobs client object.



   .. py:method:: delete_job(job_name, region, project_id = PROVIDE_PROJECT_ID)


   .. py:method:: create_job(job_name, job, region, project_id = PROVIDE_PROJECT_ID)


   .. py:method:: update_job(job_name, job, region, project_id = PROVIDE_PROJECT_ID)


   .. py:method:: execute_job(job_name, region, project_id = PROVIDE_PROJECT_ID, overrides = None)


   .. py:method:: get_job(job_name, region, project_id = PROVIDE_PROJECT_ID)


   .. py:method:: list_jobs(region, project_id = PROVIDE_PROJECT_ID, show_deleted = False, limit = None)


.. py:class:: CloudRunAsyncHook(gcp_conn_id = 'google_cloud_default', impersonation_chain = None, transport = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.common.hooks.base_google.GoogleBaseAsyncHook`


   Async hook for the Google Cloud Run service.

   :param gcp_conn_id: The connection ID to use when fetching connection info.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account.
   :param transport: Optional. The transport to use for API requests. Can be 'rest' or 'grpc'.
       When set to 'rest', uses the synchronous REST client wrapped with
       ``asyncio.to_thread()`` for compatibility with async triggers.
       When None or 'grpc', uses the native async gRPC transport (grpc_asyncio).


   .. py:attribute:: sync_hook_class


   .. py:attribute:: transport
      :value: None



   .. py:method:: get_conn()
      :async:


      Return connection for the hook.



   .. py:method:: get_operation(operation_name)
      :async:



.. py:class:: CloudRunServiceHook(gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.common.hooks.base_google.GoogleBaseHook`


   Hook for the Google Cloud Run services.

   :param gcp_conn_id: The connection ID to use when fetching connection info.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account.


   .. py:method:: get_conn()

      Return connection for the hook.



   .. py:method:: get_service(service_name, region, project_id = PROVIDE_PROJECT_ID)


   .. py:method:: create_service(service_name, service, region, project_id = PROVIDE_PROJECT_ID)


   .. py:method:: delete_service(service_name, region, project_id = PROVIDE_PROJECT_ID)


.. py:class:: CloudRunServiceAsyncHook(gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.common.hooks.base_google.GoogleBaseAsyncHook`


   Async hook for the Google Cloud Run services.

   :param gcp_conn_id: The connection ID to use when fetching connection info.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account.


   .. py:attribute:: sync_hook_class


   .. py:method:: get_conn()

      Return connection for the hook.



   .. py:method:: create_service(service_name, service, region, project_id = PROVIDE_PROJECT_ID)
      :async:



   .. py:method:: delete_service(service_name, region, project_id = PROVIDE_PROJECT_ID)
      :async:



